# torment

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.nvim/: init.lua
src/: CMakeLists.txt  const_optional.hxx  ignore.cxx  ignore3.cxx  main.cxx  matrix.cxx  matrix.hxx  slapack.hxx  tormentor.cxx  tormentor.hxx  vector.cxx  vector.hxx
src/array/: dense.hxx  dense.txx  dynamic.hxx  sparse.hxx  sparse.txx  sparse_2d.hxx  sparse_2d.txx  std_array.hxx  std_array.txx
src/array/dense/: array.hxx  array.txx  base.hxx  base.txx  core.hxx  core.txx  proxy.hxx  proxy.txx  smart_container.hxx  smart_container.txx
src/array/dense/proxy/: core.hxx  core.txx  iterable.hxx  iterable.txx  iterator.hxx  iterator.txx
src/array/sparse/: 2d.hxx  2d.txx  array.hxx  array.txx  base.hxx  base.txx
src/map/: map.hxx  map.txx
src/matrix/dense/: core.hxx  core.txx
src/pair/: pair.hxx  pair.txx
src/radix/: iface.hxx  iface.txx  mix.hxx  mix.md  mix.txx
src/vector/dense/: core.hxx  core.txx
tests/: CMakeLists.txt  main.cxx
