

# add_executable(tor-mentor
#   main.cxx  )
# target_include_directories(tor-mentor
#   PRIVATE
#     ${CMAKE_CURRENT_LIST_DIR}  )

# # target_link_libraries(main PRIVATE Boost::boost Boost::<lib1> Boost::<lib2> ...)
# target_link_libraries(tor-mentor
#   PRIVATE
#     SDL2::SDL2
#     SDL2::SDL2main
#     Boost::boost  )